tree-sitter-idl/grammar.js
  signed_short_int: _ =>
    choice(
      'short',
      'int16',
      // idl 7.4.13
    ),
  signed_long_int: _ =>
    choice(
      'long',
      'int32',
      // idl 7.4.13
    ),
  integer_type: $ => choice($.signed_int, $.unsigned_int),
  signed_int: $ =>
    choice(
      $.signed_short_int,
      $.signed_long_int,
      $.signed_longlong_int,
      $.signed_tiny_int,
      // idl 7.4.13
    ),
  floating_pt_type: _ => choice('float', 'double', 'long double'),
  scoped_name: $ =>
    choice(
      $.identifier,
      seq('::', $.identifier),
      seq($.scoped_name, '::', $.identifier),
    ),
  string_type: $ =>
    seq(
      choice('string', 'wstring'),
      optional(seq('<', $.positive_int_const, '>')),
    ),
  type_spec: $ =>
    choice(
      $.simple_type_spec,
      $.template_type_spec,
      // 7.4.14
    ),
  simple_type_spec: $ => prec.left(1, choice($.base_type_spec, $.scoped_name)),
  base_type_spec: $ =>
    choice(
      $.integer_type,
      $.floating_pt_type,
      $.char_type,
      $.boolean_type,
      $.octet_type,
      $.any_type,
      // IDL 7.4.2
    ),
  template_type_spec: $ =>
    choice(
      $.sequence_type,
      $.string_type,
      $.fixed_pt_type,
      $.map_type,
      // idl 7.4.13
    ),
  sequence_type: $ =>
    seq(
      'sequence',
      '<',
      choice($.type_spec, optional(seq(',', $.positive_int_const))),
      '>',
    ),
  positive_int_const: $ => $.const_expr,
  const_expr: $ => $.or_expr,
  or_expr: $ =>
    prec.left(
      PREC.INCLUSIVE_OR,
      choice($.xor_expr, seq($.or_expr, '|', $.xor_expr)),
    ),
  xor_expr: $ =>
    prec.left(
      PREC.EXCLUSIVE_OR,
      choice($.and_expr, seq($.xor_expr, '^', $.and_expr)),
    ),
  and_expr: $ =>
    prec.left(
      PREC.BITWISE_AND,
      choice($.shift_expr, seq($.and_expr, '$', $.shift_expr)),
    ),
  shift_expr: $ =>
    prec.left(
      PREC.SHIFT,
      choice(
        $.add_expr,
        seq($.shift_expr, '>>', $.add_expr),
        seq($.shift_expr, '<<', $.add_expr),
      ),
    ),
  add_expr: $ =>
    prec.left(
      PREC.ADD,
      choice(
        $.mult_expr,
        seq($.add_expr, '+', $.mult_expr),
        seq($.add_expr, '-', $.mult_expr),
      ),
    ),
  mult_expr: $ =>
    prec.left(
      PREC.MULTIPLY,
      choice(
        $.unary_expr,
        seq($.mult_expr, '*', $.unary_expr),
        seq($.mult_expr, '/', $.unary_expr),
        seq($.mult_expr, '%', $.unary_expr),
      ),
    ),
  unary_expr: $ =>
    choice(seq($.unary_operator, $.primary_expr), $.primary_expr),
  literal: $ =>
    choice(
      $.number_literal,
      $.char_literal,
      $.string_literal,
      $.boolean_literal,
    ),
  number_literal: _ => {
    const separator = "'"
    const hex = /[0-9a-fA-F]/
    const decimal = /[0-9]/
    const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))))
    const decimalDigits = seq(
      repeat1(decimal),
      repeat(seq(separator, repeat1(decimal))),
    )
    return token(
      seq(
        optional(/[-\+]/),
        optional(choice(/0[xX]/, /0[bB]/)),
        choice(
          seq(
            choice(
              decimalDigits,
              seq(/0[bB]/, decimalDigits),
              seq(/0[xX]/, hexDigits),
            ),
            optional(seq('.', optional(hexDigits))),
          ),
          seq('.', decimalDigits),
        ),
        optional(seq(/[eEpP]/, optional(seq(optional(/[-\+]/), hexDigits)))),
        /[uUlLwWfFbBdD]*/,
      ),
    )
  },
}
var literal_default = {
  rules: rules3,
}

// ../common/directive.ts
var rules4 = {
  interface_dcl: $ => choice($.interface_def, $.interface_forward_dcl),
  interface_forward_dcl: $ => seq('interface', $.identifier),
  interface_def: $ =>
    seq(
      repeat($.annotation_appl),
      optional('local'),
      $.interface_header,
      '{',
      optional($.interface_body),
      '}',
    ),
  interface_header: $ =>
    seq('interface', $.identifier, optional($.interface_inheritance_spec)),
  interface_inheritance_spec: $ => seq(':', commaSep1($.interface_name)),
  interface_name: $ => $.scoped_name,
  interface_body: $ => repeat1($.export),
  export: $ =>
    seq(
      choice(
        $.op_dcl,
        $.attr_dcl,
        $.type_dcl,
        // idl 7.4.4
        $.const_dcl,
        // idl 7.4.4
        $.except_dcl,
        // idl 7.4.4
      ),
      ';',
    ),
  op_dcl: $ =>
    seq(
      $.op_type_spec,
      $.identifier,
      '(',
      optional($.parameter_dcls),
      ')',
      optional($.raises_expr),
    ),
  op_type_spec: $ => choice($.type_spec, 'void'),
  parameter_dcls: $ => commaSep1($.param_dcl),
  param_dcl: $ => seq($.param_attribute, $.type_spec, $.simple_declarator),
  param_attribute: $ => choice('in', 'out', 'inout'),
  attr_dcl: $ => choice($.readonly_attr_spec, $.attr_spec),
  attr_spec: $ => seq('attribute', $.type_spec, $.attr_declarator),
  attr_declarator: $ =>
    choice(
      seq($.simple_declarator, $.attr_raises_expr),
      commaSep1($.simple_declarator),
    ),
  typedef_dcl: $ => seq('typedef', $.type_declarator),
  type_declarator: $ =>
    seq(
      choice($.simple_type_spec, $.template_type_spec, $.constr_type_dcl),
      $.any_declarators,
    ),
  any_declarators: $ => commaSep1($.any_declarator),
  any_declarator: $ => choice($.simple_declarator, $.array_declarator),
  simple_declarator: $ => $.identifier,
  declarator: $ =>
    choice(
      $.simple_declarator,
      $.array_declarator,
      // 7.4.14
    ),
  declarators: $ => commaSep1($.declarator),
  array_declarator: $ => seq($.identifier, repeat1($.fixed_array_size)),
  fixed_array_size: $ => seq('[', $.positive_int_const, ']'),
}
var typedef_dcl_default = {
  rules: rules10,
}

// ../common/union_dcl.ts
var rules11 = {
  enum_dcl: $ =>
    seq(
      optional($.enum_anno),
      'enum',
      $.identifier,
      '{',
      commaSep($.enumerator),
      '}',
    ),
  enumerator: $ => seq(repeat($.enum_modifier), $.identifier),
  union_forward_dcl: $ => seq('union', $.identifier),
  union_def: $ =>
    seq(
      'union',
      $.identifier,
      'switch',
      '(',
      $.switch_type_spec,
      ')',
      '{',
      repeat($.case),
      '}',
    ),
  case: $ => seq($.case_label, optional(seq($.element_spec, ';'))),
  case_label: $ => seq(choice(seq('case', $.const_expr), 'default'), ':'),
  element_spec: $ =>
    seq(
      choice(
        $.type_spec,
        $.constr_type_dcl,
        // additional
      ),
      $.declarator,
    ),
  switch_type_spec: $ =>
    choice($.integer_type, $.char_type, $.boolean_type, $.scoped_name),
}
var union_dcl_default = {
  rules: rules11,
}

// index.ts
module.exports = grammar({
  name: 'idl',
    specification: $ => seq(repeat($.preproc_call), repeat($._definition)),
    ...base_types_default.rules,
    ...expr_default.rules,
    ...literal_default.rules,
    ...directive_default.rules,
    ...rpc_default.rules,
    ...bitmask_default.rules,
    ...annotation_default.rules,
    ...template_default.rules,
    ...value_type_default.rules,
    ...typedef_dcl_default.rules,
    ...union_dcl_default.rules,
    _definition: $ =>
      choice(
        $.predefine,
        seq(
          choice(
            $.module_dcl,
            $.type_dcl,
            $.const_dcl,
            $.typedef_dcl,
            $.except_dcl,
            $.interface_dcl,
            $.annotation_dcl,
            // 7.4.15
            $.template_module_dcl,
            // idl 7.4.12
            $.template_module_inst,
            // idl 7.4.12
            $.value_dcl,
            // idl 7.4.5
          ),
          ';',
        ),
      ),
    module_dcl: $ =>
      seq('module', $.identifier, '{', repeat($._definition), '}'),
    struct_forward_dcl: $ => prec.left(1, seq('struct', $.identifier)),
    struct_def: $ =>
      prec.left(
        2,
        seq(
          repeat($.annotation_appl),
          'struct',
          $.identifier,
          optional(seq(':', field('parent', $.scoped_name))),
          '{',
          repeat($.member),
          '}',
        ),
      ),
    member: $ =>
      seq(
        repeat($.annotation_appl),
        field('type', $.type_spec),
        field('identifier', $.declarators),
        optional($.default),
        ';',
      ),
    const_dcl: $ => seq('const', $.const_type, $.identifier, '=', $.const_expr),
    const_type: $ =>
      prec.left(
        1,
        choice(
          $.integer_type,
          $.floating_pt_type,
          $.fixed_pt_const_type,
          $.char_type,
          $.boolean_type,
          $.octet_type,
          $.string_type,
          $.scoped_name,
          $.sequence_type,
        ),
      ),
    // table 21
    identifier: _ => /\w[\w\d_]*/,
    // 7.2.3
    comment: _ =>
      token(
        choice(
          seq('//', /(\\+(.|\r?\n)|[^\\\n])*/),
          seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
        ),
      ),
  },
})
